# VERSE-Toolchain

./: .git-blame-ignore-revs  .gitignore  README.md  cn-dap.opam  cn-dap.opam.locked-5.1.1  cn-dap.opam.template  cn-lsp.opam  cn-lsp.opam.locked  cn-lsp.opam.locked-4.14.1  cn-lsp.opam.locked-5.1.1  cn-lsp.opam.template  dune-project  telemetry.opam  telemetry.opam.locked-4.14.1  telemetry.opam.locked-5.1.1
.github/workflows/: ci.yml  client-ci.yml  debugger-ci.yml  ocaml-ci.yml  server-ci.yml  telemetry-ci.yml  unified-ci.yml
cn-client/: .vscodeignore  README.md  package-lock.json  package.json
cn-client/src/: extension.ts
cn-client/syntaxes/: cn.tmLanguage.json
cn-dap/debugger/: README.md  cndap.opam  cndap.opam.locked  cndap.opam.template  dune-project
cn-dap/debugger/lib/: adapter.ml  commands.ml  debugger.ml  debugger_state.ml  dune  events.ml  frameMap.ml  launch.ml  log.ml  log.mli
cn-dap/debugger/test/: dune
cn-dap/lib/: adapter.ml  commands.ml  debugger.ml  dune  frameMap.ml  log.mli  order.ml
cn-lsp/: README.md
cn-lsp/client/: package.json
cn-lsp/client/src/: extension.ts
cn-lsp/client/syntaxes/: cn.tmLanguage.json
cn-lsp/lib/: dune  lenses.ml  lspCerb.ml  lspCn.ml  lspCn.mli  parse.ml  path.ml  process.ml  progress.ml  range.ml  range.mli  semanticTokens.ml  server.ml  serverConfig.ml  serverTelemetry.ml  testGen.ml  uri.ml  verify.ml
cn-lsp/server/: README.md  cnlsp.opam  cnlsp.opam.locked  cnlsp.opam.locked-4.14.1  cnlsp.opam.locked-5.1.1  dune-project
cn-lsp/server/lib/: document.ml  iTree.ml  iTree.mli  lspCn.ml  lspCn.mli  parse.ml  position.ml  position.mli  range.ml  range.mli  server.ml  server.mli  sourceInfo.ml  sourceInfo.mli  spec.ml  uri.ml
cn-lsp/server/test/: document.ml  dune  iTree.ml  main.ml  sourceInfo.ml
cn-lsp/test/: dune  main.ml  parse.ml  server.ml
coq-synthesis-vscode/: README.md
coq-synthesis-vscode/src/: extension.ts
coq-synthesis-vscode/webview/: tree.css  tree.js
docs/cn-lsp/: 2025-02-27-telemetry-schema.json  2025-02-27-telemetry-schema.md  resource-hover.md
docs/tech_notes/: 2024-12-13-state-machine-reasoning-in-CN.md  2024-12-13-test-sequence-generation-in-CN.md  2025-2-21-CN-telemetry-setup-guide.md  2025-3-14-CN-mkm-demo.md
server/: README.md
telemetry/: README.md  dune-project  telemetry.opam  telemetry.opam.locked
telemetry/lib/: disk.ml  dune  event.ml  eventData.ml  memory.ml  profileData.ml  session.ml  storage.ml  storage.mli
telemetry/test/: disk.ml  dune  main.ml  memory.ml  sampleEvent.ml  sampleProfile.ml  storage.ml
