(lang dune 3.16)

(name telemetry)

(generate_opam_files true)

(authors "Sam Cowger")

(maintainers "Sam Cowger")

(package
 (name telemetry)
 (synopsis "Telemetry collection")
 (allow_empty)
 (depends
  ocaml
  dune
  (base
   (and
    (>= v0.16.3)
    (< v0.18)))
  (ppx_deriving_yojson
   (and
    (>= 3.0.0)
    (< 4.0.0)))
  (yojson
   (and
    (>= 2.0.0)
    (< 3.0.0)))))
