(library
 (name cnlsp)
 (libraries
  base
  cn
  linol
  linol-lwt
  lsp
  ppx_deriving_yojson.runtime
  shell.filename_extended
  telemetry)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show ppx_deriving_yojson)))

(env
 (dev
  (flags
   ;; Disable promotion of warnings to errors
   (:standard -warn-error -A))))
