(library
 (name telemetry)
 (public_name telemetry)
 (libraries
  base
  ppx_deriving_yojson.runtime
  ppx_hash
  ppx_sexp_conv
  unix
  yojson)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_hash
   ppx_sexp_conv
   ppx_deriving_yojson)))

(env
 (dev
  (flags
   ;; Disable promotion of warnings to errors
   (:standard -warn-error -A))))
